added scope value